@@ -39,6 +39,7 @@
     disconnected state
   * BARControl: added tooltip for total entries
   * BARControl: fixed clone job and update view
+  * BARControl: fixed file requester if job is unknown
 
 2023-04-16 0.22g
   * fixed lost resource in debug version
